# gvecdb-ocaml

./: README.md
lib/: dune  gvecdb.ml  gvecdb.mli  gvecdb_internal.capnp  keys.ml  props_capnp.ml  props_capnp.mli  store.ml  types.ml
test/: dune  test_gvecdb.ml
test_schemas/: dune  schemas.capnp
